--- a/.env-cmdrc.json
+++ b/.env-cmdrc.json
@@ -1,6 +1,6 @@
 {
     "development": {
-        "REACT_APP_BACKEND_URL": "http://localhost:4000/"
+        "REACT_APP_BACKEND_URL": "http://localhost:4000"
     },
     "production": {
         "REACT_APP_BACKEND_URL": "https://shai-backend.herokuapp.com/"
