--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
