--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "env-cmd -e development react-scripts start",
+    "start": "HTTPS=true SSL_CRT_FILE=./.cert/localhost.pem SSL_KEY_FILE=./.cert/localhost-key.pem env-cmd -e development react-scripts start",
     "build": "env-cmd -e production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
