--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "buffer": "^6.0.3",
     "env-cmd": "^10.1.0",
     "jquery": "^3.6.0",
     "node-sass": "^7.0.1",
@@ -24,8 +25,11 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
+    "stream-browserify": "^3.0.0",
+    "timers-browserify": "^2.0.12",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "xml2js": "^0.4.23"
   },
   "scripts": {
     "start": "env-cmd -e development react-scripts start",
